--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
-  "cleanUrls": true,
-  "headers": [
-    {
-      "source": "/maze/midou.html",
-      "headers": [{ "key": "Accept-Ranges", "value": "bytes" }]
-    }
-  ],
   "rewrites": [
-    { "source": "/midou", "destination": "/maze/midou.html" },
-    { "source": "/maze/midou", "destination": "/maze/midou.html" }
+    { "source": "/(.*)", "destination": "/maze/$1" }
   ]
 }
